color contrast fix

--- a/home/theme/default/css/reco.css
+++ b/home/theme/default/css/reco.css
@@ -346,7 +346,7 @@ pre code {
 .source-nav li button {
   font-weight: bold;
   color: #fff !important;
-  background-color: #777;  
+  background-color: #767676;  
   text-decoration: none !important;
   padding: .5rem 1rem;    
   border: none;
